# btcpayserver-startos

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  UPDATING.md  config_spec.yaml  docker_entrypoint.sh  get_tag.sh  instructions.md  manifest.yaml  package-lock.json  package.json
.github/workflows/: build.yml  buildService.yml  release.yml  releaseService.yml  tagAndRelease.yml
actions/: Program.cs  actions.csproj  btcpay-admin.sh
assets/compat/: bitcoind_config_rules.yaml  btc-rpc-proxy_config_rules.yaml  config_spec.yaml  dependencies.yaml
assets/utils/: btcpay-admin.sh  health_check.sh  nbx_synced.sh  postgres-ready.sh  postgres-shutdown.sh
configurator/: Cargo.toml
configurator/src/: main.rs
configurator/src/templates/: .backupignore.template  settings-btcpay.config.template  settings-nbx.config.template
docs/: instructions.md  instructions_template.md
migrations/: from_lt_1_4_7.sh  to_lt_1_4_7.sh
scripts/: deps.ts  embassy.ts
scripts/migrations/: 1_10_3_up_migration.ts  1_13_1_1_down_migration.ts  1_13_1_1_up_migration.ts  1_13_1_2_down_migration.ts  1_13_1_2_up_migration.ts  1_13_5_1_down_migration.ts  1_13_5_1_up_migration.ts  1_4_7_down_migration.ts  1_4_7_from_migration.ts  1_4_7_to_migration.ts  1_4_7_up_migration.ts  2_0_0_1_down_migration.ts  2_0_0_1_up_migration.ts  2_0_0_up_migration.ts  2_0_7_down_migration.ts  (+1 more)
startos/: backups.ts  dependencies.ts  index.ts  init.ts  interfaces.ts  main.ts  manifest.ts  sdk.ts  store.ts  utils.ts  vault.ts
utils/: nginx.conf
(+113 files in other folders)
