[package]
name = "configurator"
version = "0.1.0"
authors = ["Lucy Cifferello <lucy@start9labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
base64 = "0.13.0"
emver = { version = "0.1.0", features = ["serde"] }
hex = "0.4.2"
http = "0.2.1"
nix = "0.19.0"
rand = "0.8.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.13"